# FEUP-AEDA

./: README.md
CI1 18_19/Code/Tests/: Account.h  Bank.h  BankOfficer.cpp
CI1 19_20/Code/Tests/: Hotel.h  Room.cpp  Room.h  tests.cpp
CI1_1819/Code/Tests/: Account.cpp  Bank.cpp
CI2 18_19/Code/Tests/: CStack.h  Kart.cpp  tests.cpp
CI2 19_20/Code/Tests/: Box.cpp  ThinTallBox.cpp  ThinTallBox.h  Warehouse.h  WideFlatBox.cpp
CI2_1819/Code/Tests/: Kart.h
CI2_1920/Code/Tests/: Box.h
CIs/CI1_1718/Code/: CMakeLists.txt  main.cpp
CIs/CI1_1718/Code/Tests/: Car.cpp  Car.h  Garage.h  Test.cpp
CIs/CI1_1819/Code/Tests/: BankOfficer.h
CIs/CI2_1718/Code/: CMakeLists.txt  main.cpp
CIs/CI2_1718/Code/Tests/: Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h  Test.cpp
CIs/CI2_1819/Code/Tests/: CSimpleList.h
CIs/CI2_1920/Code/Tests/: Warehouse.cpp
CIs/CI3_1617/src/: CMakeLists.txt
CIs/CI3_1617/src/Tests/: Book.cpp  ReadingClub.cpp  ReadingClub.h  User.cpp  tests.cpp
CIs/CI3_1819/src/Tests/: Client.cpp  PropertyTypeItem.cpp  REAgency.cpp  REAgency.h
CIs/CI3_1920/src/Tests/: Gallery.cpp  Gallery.h  Paint.cpp
CIs/CI4_1415/src/: CMakeLists.txt  main.cpp
CIs/CI4_1415/src/Tests/: Clinica.cpp  Clinica.h  tests.cpp
CIs/CI4_1516/src/: CMakeLists.txt  main.cpp
CIs/CI4_1516/src/Tests/: Cinema.cpp  Cinema.h  CinemaFinder.cpp  tests.cpp  (+2 more)
TP01/Code/Tests/: tests.cpp
TP02/Code/Tests/: fleet.h  vehicle.cpp  vehicle.h
TP03/Code/Tests/: graph.h
TP04/Code/Tests/: insertionSort.h
TP05/Code/Tests/: game.cpp  game.h
TP05/Tests/: game.cpp  game.h  kid.cpp  tests.cpp
(+30 files in other folders)
